fix(badges): set white-space to not wrap on the total projects text

--- a/src/components/badges/total-projects/styles.css
+++ b/src/components/badges/total-projects/styles.css
@@ -13,4 +13,8 @@
     margin-left: 5px;
     font-weight: 700;
   }
+
+  & p {
+    white-space: nowrap;
+  }
 }
